=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.x CA
 - Changed: Removed some css colour inline items not required (windmillway)
 - Changed: Fixed a few bugs in Census column hide/show algorithms (windmillway) 
 - Merged: Merge changes r6077- r6086 from the trunk. (windmillway)
 - Added: More columns for USA Census years. USA 1790-1840 years still left to do (windmillway)
 - Merged: Merge changes r6064- r6076 from the trunk. (windmillway)
 - Cleaned up "View" Census Header text and associated tooltip text. (windmillway)
 - Added: CA "Templates" for USA for years (1900, 1890, 1880, 1870, 1860 and 1850), also used Nigels latest css values (modified a bit) (windmillway)
 - Added: Notes Input field, also if the Notes, Enumeration, or Locality fields are empty, the line is completely removed in the Shared note. (windmillway)
 - Added: Language file lang.en.php to GEDFact_assistant/languages/ (windmillway)
 - Changed: Moved Main Javascript Functions to PHP file (GEDFact_assistant/_CENS/js/census_5_input.js.php) deleted old file (windmillway)
 - Changed: Corrected JavaScript problem with "Head of Family" Names containing double quotes (Nickname etc) (windmillway)
 - Changed: added missing Header Tooltip messages. (windmillway)
 - Changed: Correct spelling of Tool tip message "Foreign". (windmillway)
 - Merged: Merge changes r6048- r6063 from the trunk. (windmillway)
 - Changed: 1) Improvements to dynamic switching between Census Country/Years. 
            2) UK Finished, Still USA 1920 and less to do. 
			3) Hover tooltip enabled on edit and view Table Headers (windmillway) 
 - Changed: GEDFact_assistant/_CENS/ files to make use of new shared note formatting (windmillway)