@@ -120,6 +120,7 @@ $SEARCH_SPIDER = false;		// set empty at start
 $ua = isset($_SERVER['HTTP_USER_AGENT']) ? $_SERVER['HTTP_USER_AGENT'] : "";
 
 $worms = array(
+	'oBot',
 	'Indy Library',
 	'XXX',
 //	'robotgenius',
